registry/kubefirst/components/atlantis/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: atlantis
  namespace: atlantis
  annotations:
    kubernetes.io/ingress.class: traefik-external
    argocd.argoproj.io/sync-wave: '10'
spec:
  routes:
    - kind: Rule
      match: Host(`atlantis.k8s.dev.io`)
      services:
        - name: atlantis
          port: 80
  tls:
    secretName: atlantis-tls
